feat(ListOrganizations): make it able to retrieve summary info of organizations together
